# SkeletonProject

./: .gitignore  README.md
helloWorld/: CMakeLists.txt  helloWorld.c
skeletonOS/: CMakeLists.txt  config.h.in  porting.c
skeletonOS/include/: cbuf.h  dsp.h  fsm.h  porting.h  skeletonOS.h
skeletonOS/src/: dsp.c  fsm.c  json.c  log.c  scheduler.c
